<resources>
    <string name="app_name">Coffee World</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="cafe">Cafe</string>
    <string name="menu">Menu</string>
    <string name="order">Order</string>
    <string name="cart">Cart</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="request_login">Login to your account to access coffee world</string>
    <string name="logo">Logo</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password_under_line"><u>Forgot Password?</u></string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="or_connect_using">Or connect using</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="register">Register</string>
    <string name="let_s_get_started">Let\'s Get Started</string>
    <string name="create_an_account_to_experience_coffee_world">Create an account to experience coffee world</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="location">Location</string>
    <string name="create">Create</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="show_password">Show Password</string>
    <string name="back">Back</string>
    <string name="telegram">Telegram</string>
    <string name="please_wait">Please wait</string>
    <string name="request_provide_user_info">Please provide your account user information</string>
    <string name="confirm">Confirm</string>
    <string name="remembered_my_password">I remembered my password</string>
    <string name="other">Other</string>
    <string name="more">More</string>
    <string name="coffee_shop">Coffee Shop</string>
    <string name="map">Map</string>
    <string name="search">Search</string>
    <string name="notification">Notification</string>
    <string name="gift_card">Gift Card</string>
    <string name="coffee_shop_near_you">Coffee shop near you</string>
    <string name="image_cafe">Image Cafe</string>
    <string name="cafe_name">Cafe Name</string>
    <string name="address">Address</string>
    <string name="add">Add</string>
    <string name="from_here_0_01_km">From here 0.01 km</string>
    <string name="other_coffee_shops">Other Coffee shops</string>
    <string name="offline">Offline</string>
    <string name="close">Close</string>
    <string name="share_with_your_friends">Share with your friends</string>
    <string name="business_hours">Business hours:</string>
    <string name="rating">Rating</string>
    <string name="share">Share</string>
    <string name="description">Description</string>
    <string name="utility">Utility</string>
    <string name="hunt_for_deals">Hunt for deals</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="explore">Explore</string>
    <string name="support">Support</string>
    <string name="order_reviews">Order reviews</string>
    <string name="contact_and_feedback">Contact and feedback</string>
    <string name="account">Account</string>
    <string name="personal_information">Personal information</string>
    <string name="settings">Settings</string>
    <string name="security">Security</string>
    <string name="logout">Logout</string>
    <string name="confirm_logout">Are you sure you want to log out?</string>
    <string name="next">Next</string>
    <string name="profile">Profile</string>
    <string name="camera">Camera</string>
    <string name="dashboard">Dashboard</string>
    <string name="phone">Phone</string>
    <string name="user">User</string>
    <string name="options">Options</string>
    <string name="switch_account">Switch Account</string>
    <string name="payment">Payment</string>
    <string name="open_gallery">Open Gallery</string>
    <string name="open_camera">Open Camera</string>
    <string name="update_name">Update Name</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="please_enter_your_new_name">Please enter your new name</string>
    <string name="please_enter_your_new_address">Please enter your new address</string>
    <string name="please_enter_your_new_phone">Please enter your new phone</string>
    <string name="please_enter_your_both_email">Please enter new email and your password</string>
    <string name="please_enter_your_both_password">Please enter your password</string>
    <string name="update_address">Update Address</string>
    <string name="update_phone">Update Phone</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="update_password">Update Password</string>
    <string name="current_password">Current Password</string>
    <string name="retype_new_password">Retype new password</string>
    <string name="favorite">Favorite</string>
    <string name="swap">Swap</string>
    <string name="drop_down">Drop down</string>
    <string name="dropdown_mode">Dropdown</string>
    <string name="nearby_coffee_shop">Nearby Coffee Shop</string>
    <string name="other_coffee_shop">Other Coffee Shop</string>
    <string name="connected_internet">Connected to the Internet</string>
    <string name="no_internet_connected">No Internet Connection</string>
    <string name="press_back_again">Press back again to exit!</string>
    <string name="you_are_offline">You are offline!</string>
    <string name="notification_no_internet">No internet connection found. \nCheck your network.</string>
    <string name="oops">Oops!</string>
    <string name="try_again">Try Again</string>
    <string name="response_time_out">Request timeout. Please try again later!</string>
    <string name="response_default_error">Oops, something went wrong. Please try again later!</string>
    <string name="no_data_found">"Oops! No data found</string>
    <string name="select_cafe_shop">"Select cafe shop"</string>
    <string name="select_category">"Select category"</string>
    <string name="user_profile">"User profile"</string>
</resources>