<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home" />
    <item
        android:id="@+id/cafeFragment"
        android:icon="@drawable/ic_baseline_cafe_24"
        android:title="@string/cafe" />
    <item
        android:id="@+id/orderFragment"
        android:icon="@drawable/ic_baseline_add_circle_24"
        android:title="@string/order" />
    <item
        android:id="@+id/cartFragment"
        android:icon="@drawable/ic_baseline_cart_24"
        android:title="@string/cart" />
    <item
        android:id="@+id/menuFragment"
        android:icon="@drawable/ic_baseline_menu_24"
        android:title="@string/menu" />
</menu>