<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="16dp"
    android:layout_marginBottom="4dp"
    app:cardCornerRadius="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:padding="16dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/img_cafe"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/image_cafe"
            android:scaleType="centerCrop"
            android:src="@drawable/img_coffee"
            app:shapeAppearanceOverlay="@style/image_rounded_corner" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@id/img_cafe"
            android:lines="1"
            android:text="@string/cafe_name"
            android:textAlignment="textStart"
            android:textAllCaps="true" />

        <TextView
            android:id="@+id/tv_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_name"
            android:layout_alignParentEnd="true"
            android:layout_marginVertical="8dp"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@id/img_cafe"
            android:lines="1"
            android:text="@string/address"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="16sp" />


        <TextView
            android:id="@+id/tv_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@id/img_cafe"
            android:lines="1"
            android:text="@string/from_here_0_01_km"
            android:textAlignment="textStart"
            android:textSize="16sp" />


    </RelativeLayout>

</androidx.cardview.widget.CardView>